--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-react-views": "^0.11.0",
+    "method-override": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
